--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scientific Calculator</title>
+    <title>calculator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
         <!-- Logo and Title -->
         <div class="calculator-header">
             <img src="logo.svg" alt="Scientific Calculator Logo" class="calculator-logo">
-            <h1 class="calculator-title">آلة حاسبة علمية</h1>
+            <h1 class="calculator-title">calculator</h1>
         </div>
         
         <div class="calculator">
